--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.loader {
+    border: 4px solid white;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border-right-color: transparent;
+    animation: rot 1s linear infinite;
+  }
+  
+  @keyframes rot {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 body,
 html {
     font-family: 'Poppins', sans-serif;
